<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <TextView
        android:id="@+id/txtCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="2"
        android:gravity="left"
        android:text="@string/txtCode"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/edtCode"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.86"
        android:hint="Código de la avería"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCode"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp">

        <requestFocus />
    </EditText>


    <TextView
        android:id="@+id/txtCity"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_weight="91.13"
        android:gravity="left"
        android:text="@string/txtCity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCode"
        android:layout_marginLeft="8dp" />


    <Spinner
        android:id="@+id/spCity"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:entries="@array/ciudades"
        android:inputType="textCapWords"
        app:layout_constraintStart_toEndOf="@+id/txtCity"
        app:layout_constraintTop_toBottomOf="@+id/edtCode"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right"
        android:text="Ciudad"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFA500"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="230dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Fecha"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTitleDate"
        app:layout_constraintEnd_toStartOf="@+id/btnDate"
        app:layout_constraintStart_toStartOf="@+id/spCity"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="36dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_action_date"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtDate"
        android:layout_marginRight="16dp" />


    <TextView
        android:id="@+id/txtTitleDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:gravity="right|left"
        android:text="@string/txtTitleDate"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCity"/>


    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center|left"
        android:text="@string/txtNotes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleDate"
        />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:hint="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription"
        />

</android.support.constraint.ConstraintLayout>